--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,11 +19,12 @@ error.update = Update Failed
 success.delete = Delete Success
 error.delete = Delete Failed
 success.created = Create Success
-error.created = Username Already Exist
-error.emailpassword = Email or password invalidate
+error.user.created = Username Already Exist
+error.email-password = Email or password invalidate
 error.pwd.CurrentPwd&NewPwd = New Password must be different Old Password
 error.pwd.New&Retype = New Password must be the same Retype Password
 error.pwd.format = New password is not in the correct format
 error.pwd.currentPassword = Current Password is incorrect 
 success.pwd.passwordChanged = Change Password Success
-error.no = imma say no
+reset.password.email = Request to reset password received. Check your inbox for the reset link
+size.username = Username must be between 10 and 20 characters
